--- a/error/src/main/res/values/strings.xml
+++ b/error/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">ErrorDois</string>
-    <string name="ask_for_error_log">Ocorreu um erro inesperado.\nAjude os desenvolvedores fornecendo detalhes do erro.\nObrigado por seu suporte.</string>
-    <string name="copyright_info">UnCaughtException - AndroidUi\nCopyright © 2021 Concyline.</string>
+    <string name="ask_for_error_log">Ocorreu um erro inesperado.\n\nAjude os desenvolvedores fornecendo detalhes\n do erro na aplicação.\n\nObrigado por seu suporte.</string>
+    <string name="copyright_info">UnCaughtException - AndroidUi\nCopyright © 2026 Concyline.</string>
 </resources>
